tinyc/test/bad/struct-self-member.c
struct s
{
    struct s self;
};

int main()
{
    struct s x;

    return 0;
}
